# ptapplot

./: LICENSE  README.md  case2b_data  case_2a_data  complete_config.py  dot_plot.py  drivAer_multi_series.html  generate_json_normals.py  pyproject.toml  requirements.txt  wrap_ptap_plot.py
demo_data/drivAer/: drivAer_multi_series.html  drivAer_top.json  drivAer_top_complete.json
demo_data/drivAer_dotplot/: case_2a_results.csv  case_2b_results.csv  case_a_results.csv  case_b_results.csv  dotplot_config.json  drivAer_backglass.stl  pressure_tap_positions.csv
demo_data/drivAer_lineplot/: drivAer_multi_series.html  drivAer_top.json  plot_output.html
demo_data/drivAer_needleplot/: drivAer_needleplot.html  needleplot_config.json
src/ptapplot/: dot_plot.py  generate_json_normals.py  needle_plot.py  utils.py  wrap_ptap_plot.py
src/ptapplot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
